Updated JavaScript functionality and fixed task numbering

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="AddedTaskCard">
         <h2>Added tasks</h2>
         <!-- <div class="addedtaskFiled">
-            <input class="taskInput" type="text" value="Added Task">
+            <span class="taskcounter"></span><input class="taskInput" type="text" value="Added Task">
             <div class="buttonCard">
-                <button class="editButton">Edit</button>
+                <button class="editButton">EDIT</button>
                 <button class="deleteButton">Delete</button>
             </div>
         </div> -->
